defined krab-Vgin

--- a/AngelNetwork/analytical/turk.html
+++ b/AngelNetwork/analytical/turk.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -8,12 +9,14 @@
     <style type="text/css">
         body {
             /*background-color:burlywood;*/
-            background-image:url('kraft/kraft7.jpg');
-            font-size:14px;
+            background-image: url('kraft/kraft3.jpg');
+            font-size: 18px;
         }
+
     </style>
 </head>
 <body>
+
     <div id="result">
         <p>
             تضاربت الأنباء بشأن الإفراج عن المطرانين المختطفين في سوريا، حيث أكد العقيد فاتح حسون مساعد رئيس هيئة الأركان في الجيش السوري الحر النبأ، متهما النظام بالوقوف وراء الاختطاف، بينما نفاه عضو السريان الأرثوذكس في الائتلاف الوطني لقوى الثورة والمعارضة السورية عبد الأحد سطيفو.
@@ -41,6 +44,7 @@
         </p>
 
     </div>
+    <p></p>
     <div>
         مەركىزىي ھەربىي ئىشلار كومىتېتىنىڭ ھەربىي مەشىق يىغىنى 25-نويابىر بېيجىڭدا ئېچىلدى. جۇڭگو كومپارتىيەسى مەركىزىي كومىتېتىنىڭ باش شۇجىسى، دۆلەت رەئىسى، مەركىزىي ھەربىي ئىشلار كومىتېتىنىڭ رەئىسى شى جىنپىڭ يىغىنغا قاتناشتى ھەم مۇھىم سۆز قىلدى. ئۇ مۇنۇلارنى تەكىتلىدى: پۈتۈن ئارمىيە يېڭى دەۋردىكى پارتىيەنىڭ ئارمىيەنى قۇدرەت تاپقۇزۇش ئىدىيەسى، يېڭى دەۋردىكى ھەربىي ئىستراتېگىيە فاڭجېنىنى ئىزچىللاشتۇرۇپ، دىققەتنى ئۇرۇش تەييارلىقى، ئۇرۇش قىلىشقا مەركەزلەشتۈرۈش، ئەمەلىي ئۇرۇش، ئەمەلىي مەشىق، بىرلەشمە ئۇرۇش، بىرلەشمە مەشىق، پەن-تېخنىكا ئارقىلىق مەشىقنى كۈچەيتىش، مەشىقنى قانۇن بويىچە ئىدارە قىلىشتا چىڭ تۇرۇپ، ئېسىل ئەنئەنىنى جارى قىلدۇرۇپ، ئىسلاھات، يېڭىلىق يارىتىشنى يەنىمۇ كۈچەيتىپ، يېڭىچە ھەربىي مەشىق سىستېمىسىنى تېزدىن بەرپا قىلىپ، مەشىق سەۋىيەسى ۋە ئۇرۇشتا غەلىبە قىلىش ئىقتىدارىنى ئومۇميۈزلۈك ئۆستۈرۈپ، پارتىيەنىڭ يېڭى دەۋردىكى ئارمىيەنى قۇدرەت تاپقۇزۇش نىشانىنى ئىشقا ئاشۇرۇش، ئارمىيەمىزنى دۇنيانىڭ ئالدىنقى قاتارىدىكى ئارمىيە قىلىپ ئومۇميۈزلۈك قۇرۇپ چىقىشنى كۈچلۈك تىرەككە ئىگە قىلىشى كېرەك.
 
@@ -49,6 +53,18 @@
 شى جىنپىڭ يىغىندا مۇھىم سۆز قىلدى. ئۇ مۇنۇلارنى تەكىتلىدى: ھەربىي مەشىق-قىسىمنىڭ دائىملىق مەركىزىي خىزمىتى، جەڭگىۋارلىقنى ھاسىل قىلىش ۋە ئۆستۈرۈشنىڭ ئاساسىي يولى، ئەڭ بىۋاسىتە ھەربىي كۈرەش تەييارلىقى بولۇپ، قىسىمنىڭ ئۇرۇش قىلالايدىغان، ئۇرۇشتا غەلىبە قىلالايدىغان بولۇشىغا ھەقىقىي كاپالەتلىك قىلىش، قىسىمنىڭ ئومۇميۈزلۈك قۇرۇلۇش سەۋىيەسىنى ئۆستۈرۈشتە ئىنتايىن مۇھىم ئەھمىيەتكە ئىگە.
 
 شى جىنپىڭ مۇنداق كۆرسەتتى: پارتىيە 18-قۇرۇلتىيىدىن بۇيان، پارتىيە مەركىزىي كومىتېتى ۋە مەركىزىي ھەربىي ئىشلار كومىتېتى ئەمەلىي ئۇرۇشلاشقان ھەربىي مەشىقنى قەتئىي تەۋرەنمەي ئىلگىرى سۈرۈپ، پۈتۈن ئارمىيەنىڭ ھەربىي مەشىقنى ئىستراتېگىيەلىك ئورۇنغا قويۇشتا چىڭ تۇرۇشىغا تۈرتكە بولۇپ، ئەمەلىي ئۇرۇش، ئەمەلىي مەشىقنى نۇقتىلىق ئىلگىرى سۈرۈپ، بىرلەشمە جەڭ، بىرلەشمە مەشىققە چوڭقۇر تۈرتكە بولۇپ، مەشىق ساھەسىدىكى ئىسلاھات، يېڭىلىق يارىتىشنى زور كۈچ بىلەن ئىلگىرى سۈرۈپ، ئاممىۋى خاراكتېرلىك ھەربىي تەلىم ماھارىتى كۆرسىتىشكە كەڭ كۆلەمدە تۈرتكە بولدى. ئارمىيەمىز ھەربىي مەشىقتە، ئەمەلىي ئۇرۇشقا يېقىنلىشىش، ئەمەلىي ئۇرۇشقا مۇلازىمەت قىلىش جەھەتتە چوڭ قەدەم تاشلاپ، ئۇزاقتىن بۇيان ساقلىنىپ كەلگەن بەزى گەۋدىلىك زىددىيەت ۋە مەسىلىلەرنى ھەل قىلىپ، ئۇرۇش تەييارلىقى، ئۇرۇش قىلىش ئىقتىدارىنى ئۆستۈرۈش ۋە تۈرلۈك مۇھىم ۋەزىپىلەرنى ئورۇنلاشقا تىرەك بولدى.
+    </div>
+    <p></p>
+    <div>
+        رای ترجمه فوتبال، برای دقیقاً هدف تاکتیکی معلمان خارجی، باید یک بنیاد فوتبال معین داشته باشیم، که به ترجمه نیاز دارد که یک درک حرفه ای و عمیقی از فوتبال داشته باشد.به عنوان مثال، ترجمه‌کننده کانوارو لیبی را بگیرید. او هنگامی که جوان بود، آموزش فوتبال فوتبال فوتبال فوتبال را در مدرسه لونینگ پدید آورد، و در همان چلن با وانگ یونگپو و کوی پنگ بازی کرد. با این حال، به دلیل شرایط خود و جاده تنگ فوتبال حرفه ای، به ایتالیا روی آموزش داد تا درس بیرون بگیرد. تجربه فوتبال او و فرایند مطالعه در ایاون کانوارو رو شکست داد و مربي از تيانجين کوانجين تا گوانزو اورگرند رو دنبال کرد
+
+
+
+بر خلاف   که یک ترجمه آموزش فوتبال ملی کاماکو بود، در آرژانتینا بزرگ شد و سطح اسپانیایی خوب داشت، ولی قصد کاماکو را تحویل دادن سخت است چون او فوتبال را نمی شناسد و چینی را متوسط است.مهم نیست که چقدر کماکو گفت، زوی ی فقط چند کلمه ساده برای تعریف استفاده می کند، که همچنین باعث ناتوانی ارتباط خوبی بین کماکو و بازیگران است، که بیشتر به مشکلات مردم اسپانیایی در چین رخ داد.به عنوان یک ترجمه فوتبال، میلو و یو هویسین باید فقط دانش حرفه ای لازم را جمع کند، بلکه همچنین یک محیط آموزش راحت برای مربی به عنوان زبان ایجاد کند، تا معلمان خارجی مجبور به شک یا حتی توهین از دنیا خارج باشند، تا انرژی و ذهن بیشتری در زمینه فوتبال خرج کنند."مربي جادويي" موفقيت ميلو در چين بيشتر به خاطر ترجمه ي عالي خودش يو هويکسيان هست. "اون هيچوقت اين يادداشت هاي بدي و توهين نکردن رو نميگه. اينا براي من خيلي آروم کننده است."در این صورت، نه تنها بازیکن‌ها می‌توانند فوتبال شاد بازی کنند، بلکه میلو می‌تواند فوتبال شاد خود را هم آموزش دهد.
+
+
+
+با این حال، به عنوان یک ترجمه فوتبال، با چند مشکل در ترجمه با وجود ناتوانی است.در این زمان، برای ترجمه‌کننده و معلم خارجی نیاز است که در زمان ارتباط برقرار کند، تا دقیقاً قصد مربی سر را ارتباط دهد. بنابراین، برای ایجاد رابطه خوبی بین ترجمه و مربی، هر دو طرف نیاز دارد که درک کافی داشته باشد. معلم خارجی باید به اندازه کافی تحمل دهد و از طریق دیگر مثبتی برای کمک به ترجمه‌کننده به درک و سپس آن را به بازیکنان برسانترجمه مانند پل که مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به مربوط به کلوب است. ترجمه باید نقش یک
     </div>
     <script type="text/javascript">
 
