--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -85,6 +85,9 @@
     土地局 婬性烟酒8 bar 韧者娲~马 sunset america rise
 11-26
     网整 方 油蛹蚩
+11-28
+    KLH 渴lang禾 哈萨克 阿勒泰
+    疼?.1984Start  央视 老掌沟
 </pre>
 </body>
 </html>
