--- a/Rastera/asnic/rastera/word.html
+++ b/Rastera/asnic/rastera/word.html
@@ -169,7 +169,10 @@ NailWeapon
 　　  虚词：不表示dao实在意义而表示语法意义的词，有：副词、介词、连词、助词、叹词、拟声词。
 　　  1,名词bai,Nouns (n.) 表示人或事物的名称 box,pen,tree,apple
 　　  2,代词du,Pronouns (pron.)代替名词、数词、形容词We,this,them,myself
-　　  3,形容词,Adjectives(adj.) 用来修饰zhi名词,表示人或事物的特征 good,sad,high,short
+　　  3,形容词,Adjectives(adj.) 用
+        
+        
+        来修饰zhi名词,表示人或事物的特征 good,sad,high,short
 　　  4,数词,Numerals(num.)表示数目或顺序 one,two,first
 　　  5,动词,Verb (v.) 表示动作或状态 Jump,sing,visit
 　　  6,副词,Adverbs（adv.) 修饰动、形、副等词,表示动作特征 there,widely,suddenly
