--- a/AngelNetwork/analytical/turk.html
+++ b/AngelNetwork/analytical/turk.html
@@ -9,8 +9,9 @@
     <style type="text/css">
         body {
             /*background-color:burlywood;*/
-            background-image: url('kraft/kraft3.jpg');
-            font-size: 18px;
+            background-image: url('kraft/kraft7.jpg');
+            font-size: 14px;
+            color:black;
         }
 
     </style>
