--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -89,8 +89,7 @@
     KLH 渴lang禾 哈萨克 阿勒泰
     疼?.1984Start  央视 老掌沟
 11-29
-    分类：Systematic Maticals
-    Leon OS Substance Source Solid.Dimention
+     
 	    形态 mfs cfs
             earththink 认(ren)知文体
             形态.美人鱼.维金美
@@ -99,31 +98,13 @@
         洛克梅根 cfs 
            brain controls
            动力风 
-    mfs
-    cfs
-    protal
-    //Frequent Count
-    Statistic = ["Unicode", "Language"]
-    // Kandle:word type magnet 
-    // Relate:metric - witch belong to
-    // leon:空间OS
-     Dualistic =
-    {
-        Flag: [
-            ["yes", "no"],
-            ["true", "false"]
-            ]
-    }
-    //分类学 taxonomy，systematics"Kandle",
-
-     Sym  = ["Is","Belong", "Relate", ""];
-    //Kandle:WordType Substant
-     Kandle = ["verb"]
-     Maticals
     //最具有智慧生命
     //Leon 形态生命体理序 但没有自由度 通信受阻碍
-    //cfs 
-     Renliy = ["Human","Rockmega","Leon"];
+    翻忍的太国削象 Pixal 像素  
+11-30
+    Leftleg： Marine?-
+    KLH~(月亮飞船 突然睡觉)
+    KLH~(流通bingo 奥夫道教 clyinder猫兹) 
 </pre>
 </body>
 </html>
