Knife-Ojinsa-Fortell-jumps-column 3

--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-<textarea id="code" name="code">
+<pre id="code" name="code">
 维复仇 Meisai
 
 宙斯Indexes▼
@@ -71,10 +71,10 @@
     鬼地方
     国际通知 NationalTranspeaker
     Binladen
+    ConcreteBox Propoganda
 Reria'z Lave(Rhea)
     Explais.Group
-    when snic 
-    snic time 
+    when snic   time 
         张镇爱 小臭子 王猛 城池的破坏
         老杜 郑明雪 巩亮亮（你得听） -(我)- Afled
     As fOr revenge at the restriction of Law
@@ -82,6 +82,13 @@ Reria'z Lave(Rhea)
 Transplant
     注入液体 星际跟踪
 人肉搜索加密
-    </textarea>
+
+Telephoniz
+    间歇性电话骚扰 中国 身份证 换号码烦 Period Snic is what
+    硕泰克方法Attack
+    广告 
+    IP地址 跟踪
+
+    </pre>
 </body>
 </html>
