--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -105,6 +105,14 @@
     Leftleg： Marine?-
     KLH~(月亮飞船 突然睡觉)
     KLH~(流通bingo 奥夫道教 clyinder猫兹) 
+12-3
+   Definting： Aolic.Orith //
+    四则运算英语叫法 
+    VOS 
+        plus substract multiple divide
+        加减乘除
+    是否应该 SOV
+       好似正方形的每个角
 </pre>
 </body>
 </html>
