--- a/AngelNetwork/analytical/leon.html
+++ b/AngelNetwork/analytical/leon.html
@@ -23,7 +23,7 @@
     Leon.Source.Intelligent
         Transparent.Recognition.Definition
         Triangle.Absolute.Count = All sum up including Leon.OrginDinmension = 3
-    *Triangle
+*Triangle
     Tricycle.Triangle:3
         Kolor.Whole
         Balance:Metric.Triangle.Kolor
@@ -38,7 +38,7 @@
     Triangle.Tricycle.4
 
     Intelligent.Kolor.Triangle.Metric //形 色 声 问 Ask~Vesaid~Ask~Being
-    *Axis
+*Axis
     Axis.Rotate.Start
     //为什么是Axis，应为不舒适挤 疼 或 不疼但是移动不了了 固定住
     //Ask Request-be-ing Intelligent 无规矩不成方圆 
@@ -63,9 +63,9 @@
 
     Axis.Rotate.Rectangle
 
-    *Rectangle
+*Rectangle
 
-    *Circle
+*Circle
         Dimension.Flat.Axis.Rotate.Recognized
         Renly.Solid.Earth.PI = 3.14 != Solid.Exception
     
@@ -75,15 +75,23 @@ EasyFirst.Dimention.Flat.Axis.Merge
     Kolor.Required.Distinguished = Easy
     Kolor.Transparent = Hard
     //KansaiF.EyeVision?=Kolor.Blind.Anti.InsideAtmosphere.Blue
-    *Count.Aipsoda:2=Solid.KoveredArea.Solid:Inside.AbsoluteCount
-    EasyFirst.Screen
+    *Count?.Sequence=Flat.CenterKover.MinorCount.WhichFirst = 2 //二包一
+    *Count.Aipsoda:2=Solid.KoveredArea.Solid:Inside.AbsoluteCount//三包二
+
+EasyFirst.Screen.Rectangle
     R:rectangle T:triangle C:circle
         Sequence1.RTC RCT
         Sequence2.TRC TCR
         Sequence3.CRT CTR
     //视觉偏差：正三角形等边等角60度在  正方形里面 
     Flat.ComputerScreen.Deviation
-    Transkolor.definitable.leon
+    Transkolor.Definitable.Leon
+    
+    Vesaid.VoiceLike:Count~Cut:Flat.Rectangle.Earth.AreaCut
+    Count.AreaSize.Small
+    Count.AreaSize.Big
+    Count.Specialist.SolidShaped
+        Flat.AreaCut.Refer:Inkscape.Menu.Path
 </pre>
 </body>
 </html>
