--- a/AngelNetwork/analytical/shapable.html
+++ b/AngelNetwork/analytical/shapable.html
@@ -33,14 +33,17 @@ Intelligent = ["Human","Rockmega","Leon"]; abs~cfs abs~mfs
         名词 形容词 =  Limit Range Bound Span
 var Leon = ["Source", "Orgin"]; //Source = Substance
 var Dimension = ["Flat", "Tricycle","Metric"];//Metric立体
-    Flat.Caide 
-    Flat.CaideKorner //RoundTriangle
-var Solid = ["Circle", "Trangle", "Rectangle"]//Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
-var Earth = ["Dot", "Line", "Area"]; //3A sequalet 回list        Geometric 
+    //固 顶 立
+    //Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
+    //Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
+var Solid = ["Circle", "Trangle", "Rectangle"]
+var Route = ["Dot", "Line", "Area"]; //3A sequalet 回list        Geometric 
 var Axis =
     [
         ["Center","Side", "Angle" ]//Caisde saide kaide 立体面角
     ];    
+    Flat.Caide 
+    Flat.CaideKorner //RoundTriangle
 
     Dimension
         Impressed Parallel(abs so lute) Interface Kross 
