--- a/AngelNetwork/analytical/leon.html
+++ b/AngelNetwork/analytical/leon.html
@@ -75,8 +75,9 @@ EasyFirst.Dimention.Flat.Axis.Merge
     Kolor.Required.Distinguished = Easy
     Kolor.Transparent = Hard
     //KansaiF.EyeVision?=Kolor.Blind.Anti.InsideAtmosphere.Blue
-    *Count?.Sequence=Flat.CenterKover.MinorCount.WhichFirst = 2 //二包一
-    *Count.Aipsoda:2=Solid.KoveredArea.Solid:Inside.AbsoluteCount//三包二
+    
+    *Count?.Sequence = 2(1) = Flat.CenterKover.MinorCount.WhichFirst = 2 //二包一 
+    *Count.Aipsoda = 3(2)= Solid.KoveredArea.Solid:Inside.AbsoluteCount//三包二 
 
 EasyFirst.Screen.Rectangle
     R:rectangle T:triangle C:circle
