--- a/AngelNetwork/analytical/shapable.html
+++ b/AngelNetwork/analytical/shapable.html
@@ -32,7 +32,7 @@ Intelligent = ["Human","Rockmega","Leon"]; abs~cfs abs~mfs
         动词  = ["IsEquals","Belong", "Relate", ];//"Close"
         名词 形容词 =  Limit Range Bound Span
 var Leon = ["Source", "Orgin"]; //Source = Substance
-var Dimension = ["Flat", "Tricycle","Metric"];//Metric立体
+var Maticals = ["Flat", "Tricycle","Metric"];//Metric立体
     //固 顶 立
     //Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
     //Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
@@ -45,7 +45,7 @@ var Axis =
     Flat.Caide 
     Flat.CaideKorner //RoundTriangle
 
-    Dimension
+    Maticals
         Impressed Parallel(abs so lute) Interface Kross 
             日 Inside interfaced 没有 kross 不可以左右分类 二元论：口- 先大后小 反之亦然
             ¤ Outside interfaced 没有 kross 可以左右分类  二元论：口- 先大后小 反之亦然；  一元论 4个齿儿：数量
