--- a/AngelNetwork/analytical/leon.html
+++ b/AngelNetwork/analytical/leon.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="../content/site.css" rel="stylesheet" />
 </head>
 <body>
 <pre>
+Leon
     Leon:Intelligent
         //Count.Absolute.Dimention:EasyNeglect.Count|Ask~Stick~Stack~Out
         //[Stick-Merge:Squeeze:Stack]齐 挤 融容熔 水->智能
@@ -66,6 +68,7 @@
 *Rectangle
 
 *Circle
+        Leonardo:os.so.rotatable
         Dimension.Flat.Axis.Rotate.Recognized
         Renly.Solid.Earth.PI = 3.14 != Solid.Exception
     
