--- a/AngelNetwork/analytical/basic.html
+++ b/AngelNetwork/analytical/basic.html
@@ -3,98 +3,45 @@
 <head>
 
     <title></title>
-
-
     <script src="../content/jquery/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-    <!--
-var Ketstr =
-{
-    split()	把字符串分割为子字符串数组
-    slice()	提取字符串的片断，并在新的字符串中返回被提取的部分
-substr()	从起始索引号提取字符串中指定数目的字符
-substring()	提取字符串中两个指定的索引号之间的字符
-charAt()	返回指定索引位置的字符
-charCodeAt()	返回指定索引位置字符的 Unicode 值
-concat()	连接两个或多个字符串，返回连接后的字符串
-fromCharCode()	将 Unicode 转换为字符串
+    <pre>
+Analytical.Require.Developer.AmericaComputer.Serials.Language.HtmlFirst
+Program.Language.C:
+split()	把字符串分割为子字符串数组
+slice()	提取字符串的片断，并在新的字符串中返回被提取的部分
 indexOf()	返回字符串中检索指定字符第一次出现的位置
 lastIndexOf()	返回字符串中检索指定字符最后一次出现的位置
-localeCompare()	用本地特定的顺序来比较两个字符串
-match()	找到一个或多个正则表达式的匹配
+substring()	提取字符串中两个指定的索引号之间的字符
 replace()	替换与正则表达式匹配的子串
+charAt()	返回指定索引位置的字符
+toLowerCase()	把字符串转换为小写
+toUpperCase()	把字符串转换为大写
+concat()	连接两个或多个字符串，返回连接后的字符串
+
+match()	找到一个或多个正则表达式的匹配
 search()	检索与正则表达式相匹配的值
+charCodeAt()	返回指定索引位置字符的 Unicode 值
+localeCompare()	用本地特定的顺序来比较两个字符串
+
 toLocaleLowerCase()	根据主机的语言环境把字符串转换为小写，只有几种语言（如土耳其语）具有地方特有的大小写映射
 toLocaleUpperCase()	根据主机的语言环境把字符串转换为大写，只有几种语言（如土耳其语）具有地方特有的大小写映射
-toLowerCase()	把字符串转换为小写
-toString()	返回字符串对象值
-toUpperCase()	把字符串转换为大写
+
+
 trim()	移除字符串首尾空白
+fromCharCode()	将 Unicode 转换为字符串
+   
+ </pre>
+    <script>
+        try {
+            //length(asdf)
+            document.write(indexOf("a").length)
 
-    -->
+        } catch (exception) {
 
-    <textarea id="text" cols="50" rows="20">
-        A China pediu aos Estados Unidos que parem de impor pressão máxima sobre o Irã e trabalhem para resolver a questão nuclear do Irã por meios políticos e diplomáticos, disse o porta-voz do Ministério das Relações Exteriores, Geng Shuang, nesta terça-feira (16)
-A manutenção do Acordo Nuclear com o Irã foi um tema importante na reunião dos chanceleres da União Europeia, realizada em Bruxelas na segunda-feira. Na coletiva de imprensa, a alta representante da UE para os Assuntos Exteriores e Política de Segurança, Federica Mogherini, disse que o acordo é viável sem planos alternativos e que a UE continuará trabalhando pela sua implementação, ao mesmo tempo, exige que o Irã volte a cumprir o acordo.
-Quando perguntado sobre as observações, Geng Shuang disse em uma coletiva de imprensa que os EUA devem enfrentar as preocupações da maioria da comunidade internacional, abandonar a conduta errada de exercer a pressão máxima sobre o Irã, evitar o impedimento da aplicação do acordo e criar condições para a solução diplomática e política da questão nuclear iraniana.
-Notando que a reunião enviou um sinal claro sobre a posição da UE, Geng Shuang reiterou que a implementação completa e eficaz do acordo era a única maneira prática e eficaz da solução da questão nuclear do Irã e do alívio das tensões.
-Os problemas relacionados à implementação do acordo pelo Irã devem ser resolvidos por meio do mecanismo da Comissão Conjunta do Acordo, disse o porta-voz, acrescentando que assegurar o equilíbrio entre os direitos e as obrigações do pacto é vital para sua defesa.
-    </textarea>
-
-    <br />
-    <!--  <textarea id="preditor" cols="50" rows="5"></textarea>-->
-    <div id="preditor" cols="50" rows="5">
-
-        <input type="button" id="butt" value="basic autotest for metric string fuctions" />
-        <input type="button" id="butt2" value="basic autotest for metric string fuctions" />
-
-        <input type="button" value="translate" onclick="t()" />
-        <script type="text/javascript" id="celly">
-            var filter = ":button";
-            $(filter).bind("click", function (e) {
-                $("#console").append(this.id);
-            });
-
-              var basic =
-                  [
-                      ["split", "分割", "ھسد"],
-                      ["slice", "提取", "چۋې"],
-                      ["substr", "萨博", "زشغ"]
-                  ];
-            //  function get() {
-                  basic.forEach(function (item) {
-                      item.forEach(function (e) {
-                          $("#console").append(e).append("<br /> ");
-                      });
-                  });
-                  $("#console").append("<br /> ");
-                  var lines = $('#text').val().split('\n');
-                  $.each(lines, function (index, item) {
-                      //    $this = $(this);
-                      $("#console").append(item);
-                  });
-            //  } 
-
-        </script>
-
-    </div>
-
-    <div id="console">
-    </div>
-
-    <script type="text/javascript">
-        // var content = "";
-        alert(localStorage.getItem("celly"));
-        function t() {
-            //if ($("#preditor").html().length > 0)
-            //    content = $("#preditor").html();
-            localStorage.setItem("celly", $("#preditor").html());
-            $("#console").html(localStorage.getItem("celly"));
-          // $("#preditor").html("");
-           // alert($("#console").html())
+            document.write(exception)
         }
-
     </script>
 </body>
 </html>
