--- a/AngelNetwork/analytical/shapable.html
+++ b/AngelNetwork/analytical/shapable.html
@@ -87,6 +87,7 @@ Transcolor
     R G B Alpha
  
     var SymbolPrioity = ["Separator", "Link", "Bracket"];
+    index
 //Axis:tricycle 
 var SideKorner =
     [
