basic string 2 american?.ship dang 工 田

--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -113,6 +113,11 @@
         加减乘除
     是否应该 SOV
        好似正方形的每个角
+12-5
+    社会计
+    红色砖tou
+    成交价驾驶○司漏仇睡码捅tou
+    铁眠涨潮
 </pre>
 </body>
 </html>
