--- a/AngelNetwork/analytical/basic.html
+++ b/AngelNetwork/analytical/basic.html
@@ -3,45 +3,99 @@
 <head>
 
     <title></title>
-    <script src="../content/jquery/jquery-3.5.1.min.js"></script>
+  <!--  <script src="../content/jquery/jquery-3.5.1.min.js"></script>-->
+    <script src="../content/vue/vue.min.js"></script>
 </head>
 <body>
-    <pre>
-Analytical.Require.Developer.AmericaComputer.Serials.Language.HtmlFirst
-Program.Language.C:
-split()	把字符串分割为子字符串数组
-slice()	提取字符串的片断，并在新的字符串中返回被提取的部分
-indexOf()	返回字符串中检索指定字符第一次出现的位置
-lastIndexOf()	返回字符串中检索指定字符最后一次出现的位置
-substring()	提取字符串中两个指定的索引号之间的字符
-replace()	替换与正则表达式匹配的子串
-charAt()	返回指定索引位置的字符
-toLowerCase()	把字符串转换为小写
-toUpperCase()	把字符串转换为大写
-concat()	连接两个或多个字符串，返回连接后的字符串
-
-match()	找到一个或多个正则表达式的匹配
-search()	检索与正则表达式相匹配的值
-charCodeAt()	返回指定索引位置字符的 Unicode 值
-localeCompare()	用本地特定的顺序来比较两个字符串
-
-toLocaleLowerCase()	根据主机的语言环境把字符串转换为小写，只有几种语言（如土耳其语）具有地方特有的大小写映射
-toLocaleUpperCase()	根据主机的语言环境把字符串转换为大写，只有几种语言（如土耳其语）具有地方特有的大小写映射
-
-
-trim()	移除字符串首尾空白
-fromCharCode()	将 Unicode 转换为字符串
-   
+    <pre id="preditor">
+{{content}}
+<!--   {{func}}-->
+{{details()}}
  </pre>
     <script>
-        try {
-            //length(asdf)
-            document.write(indexOf("a").length)
+        var KetString = ["split ", "slice ", "indexOf ", "lastIndexOf ", "substring ", "replace	", "charAt ", "toLowerCase	", "toUpperCase	", "concat "]
 
-        } catch (exception) {
+        var KetLangs = [
+            //---english--
+            ["split", "slice  ", "first  ", "last  ", "intercept ", "replace	 ", "at  ", "lower	 ", "upper	 ", "connect "],
+            //----chinese----
+            ["分隔 ", "截取 ", "初始索引 ", "最后索引 ", "索引之间", "替换 ", "索引 ", "小写 ", "大写 ", "连接"]
+        ];
+        var KetStruct = [
 
-            document.write(exception)
-        }
+
+        ];
+        var vm = new Vue({
+			el: '#preditor',
+			data: {
+                content: "autotest vue.js",
+			},
+			methods: {
+                details: function () {
+                    var result = ""
+
+
+                    var index = 0;
+
+                    while (index < KetString.length) {
+                        result+=    "\""+KetString[index]  ;
+                        result+=      KetLangs[0][index];
+                        result +=     KetLangs[1][index]+"\"";
+                        result += "\n";
+                        index++;
+                    }
+                    this.content = result;
+                    return this.content;
+				}
+			}
+		})
+        //3.函数表达式，立即执行该函数，不必须使用变量接收。
+        (function initialize() {
+
+            try {
+
+              
+
+            } catch (exception) {
+
+                document.write(exception)
+            }
+        })();
+        //minor incompitable ie es6 class
     </script>
 </body>
 </html>
+
+<!--Analytical.Require.Developer.AmericaComputer.Serials.Language.HtmlFirst
+Program.Language.C:
+提取动词前缀：用  提取 把
+点词：的
+提取动词后缀： with 用
+参数数词：两 三 四
+
+
+match	找到一个或多个正则表达式的匹配
+search	检索与正则表达式相匹配的值
+charCodeAt	返回指定索引位置字符的 Unicode 值
+localeCompare	用本地特定的顺序来比较两个字符串
+
+toLocaleLowerCase	根据主机的语言环境把字符串转换为小写，只有几种语言（如土耳其语）具有地方特有的大小写映射
+toLocaleUpperCase	根据主机的语言环境把字符串转换为大写，只有几种语言（如土耳其语）具有地方特有的大小写映射
+
+
+trim	移除字符串首尾空白
+fromCharCode	将 Unicode 转换为字符串
+
+Impulse.Anaylize
+        Count  Sequence Prioirty
+        Separator Link Bracket
+        Line单条 
+        是否回车后
+        Func 否则也显示在一行python like
+        分隔“我是一头大幕铝” 用 ‘一’然后在列举出来
+        
+Impuluse.Sequence
+        记录 Line Pine
+        1.关键词 Splite 是否存在 如果不存在： Easyfirst 结束单条 不在分析函数 否则 有Bracket 如果有 EasyFirst 一个就行不在进行复杂操作 执行单条：提取和记录Pine Line            
+        2.是否混编 什么语言 如果混编 performance
+        3.初期多个结果 形成 habits-->
