learnt inkscape around clone , wave drag point

--- a/AngelNetwork/analytical/basic.html
+++ b/AngelNetwork/analytical/basic.html
@@ -13,6 +13,17 @@
 {{details()}}
  </pre>
     <script>
+//"split split 分隔 "
+//"slice slice 截取 "
+//"indexOf first 初始索引 "
+//"lastIndexOf last 最后索引 "
+//"substring intercept 索引之间"
+//"replace replace 替换 "
+//"charAt at  索引 "
+//"toLowerCase lower 小写 "
+//"toUpperCase upper  大写 "
+//"concat connect 连接"
+
         var KetString = ["split ", "slice ", "indexOf ", "lastIndexOf ", "substring ", "replace	", "charAt ", "toLowerCase	", "toUpperCase	", "concat "]
 
         var KetLangs = [
