--- a/AngelNetwork/analytical/leon.html
+++ b/AngelNetwork/analytical/leon.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <pre>
+
 Leon
     Leon:Intelligent
         //Count.Absolute.Dimention:EasyNeglect.Count|Ask~Stick~Stack~Out
@@ -32,6 +33,7 @@ Leon
         Balance:Kolor.Triangle.Metric
 
         Absolute.Count:3 in Dimension
+        Maticals.Metric.FristImpressed:Ladder~Cube
         Kolor.Transparent|Disopaque
         Absolute.Count:4
 
@@ -53,7 +55,7 @@ Leon
     //水 甲骨文-隶书-楷书 Arc circle 也可叫矩形但是不认知
     //平淡有趣 感觉 颜色 熔 重复 不[Being]     
     //固：达成一致都不喜欢平淡无奇感情色彩全部Rotate挤 都固定住
-    //*关键词：全部 固(Rectangle) 水(Rigid) 色彩
+    //*关键词：全部 固(Rectangle) 软 汽 水(Rigid) 色彩
         Axis.Leon.Intelligent:Cell:MajorCore
         Axis.Fixing.Axis.Leon.Source|Leon.Orgin
         Leon.Intelligent.Require.Color.Whole
@@ -72,7 +74,7 @@ Leon
         Dimension.Flat.Axis.Rotate.Recognized
         Renly.Solid.Earth.PI = 3.14 != Solid.Exception
     
-EasyFirst.Dimention.Flat.Axis.Merge
+EasyFirst.Maticals.Flat.Axis.Merge
     Axis.Center:Kover.Count
     Flat.Sequence.Kover//一个Solid里面包含或贴面 熔
     Kolor.Required.Distinguished = Easy
@@ -96,6 +98,10 @@ EasyFirst.Screen.Rectangle
     Count.AreaSize.Big
     Count.Specialist.SolidShaped
         Flat.AreaCut.Refer:Inkscape.Menu.Path
+Flat.Maticals.Sequence?:
+    Area->Small.Angle
+    Circle~Transact.Caide
+    Rect-Ruled.Side|Angle
 </pre>
 </body>
 </html>
