--- a/Rastera/asnic/serial/persuation.html
+++ b/Rastera/asnic/serial/persuation.html
@@ -176,7 +176,8 @@
     <script src="../../content/ace-editor/ace-settings.js"></script>
 </body>
 </html>
-<!--雪碧饮料 Incident
+<!--
+    雪碧饮料 Incident
     微分子
     赵dna不干佛教 就不能复仇 为什么这么信佛教 海丽阿姨
     叫仙家去复仇 压着呢
@@ -250,4 +251,7 @@
     伤心后怎么办慰藉找最接近的人 动物
 
 [Photograghy:城门串鑫杀]
-    HxW 照相-->
+    HxW 照相
+    *Wrapped [文(疼type range)武]
+    闹歪边 曲流拐弯的部分：Vesaid 黄鼠狼 唱歌 音乐 
+-->
