--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -72,10 +72,11 @@
     国际通知 NationalTranspeaker
     Binladen
     ConcreteBox Propoganda
-Reria'z Lave(Rhea)
+Kratic Cryteck
     Explais.Group
-    when snic   time 
+    when snic   time 骨脾Skinin
         张镇爱 小臭子 王猛 城池的破坏
+          公司 方形 领导  XHN心酸感 浩子撵 涨潮 针 AI吼 图形 压制 带着拍马屁网锰优越感 游泳（水 气）
         老杜 郑明雪 巩亮亮（你得听） -(我)- Afled
     As fOr revenge at the restriction of Law
         The law:how to USE it to the maximum 
