--- a/AngelNetwork/analytical/asnical.html
+++ b/AngelNetwork/analytical/asnical.html
@@ -11,33 +11,34 @@
     <script src="../content/jquery/jquery-3.5.1.min.js"></script>
 </head>
 <body>
+    <pre>
+<span>Abc<br />123</span> <span>Abc<br />123</span> <span>Abc<br />123</span> <span>Abc<br />123</span> <span>Abc<br />123</span> <span>Abc<br />123</span>
+    </pre>
 
+  <!--  <textarea id="t" cols="100" rows="50">
 
-    <textarea id="t" cols="100" rows="50">
-
- </textarea>
+ </textarea>-->
     <pre id="p">
 
 </pre>
     <input type="button" value="autoshow" onclick="f()" />
     <script type="text/javascript">
-        var Axis =
-        [
-            ["Center", "Angle", "SideKick"]
-        ];
-        function f() {
-            var str = $("#t").val();
-            str = str.replace(/</g, "");
-            str = str.replace(/>/g, "");
-            $("#t").val(Axis[0]);
-        }
-        try {
-            $("#t").val(Axis[1][1]);
-        }
-        catch(error)
-        {
-            alert(error);
-        }
+        //var Axis =
+        //    [
+        //        ["Center", "Angle", "SideKick"]
+        //    ];
+        //function f() {
+        //    var str = $("#t").val();
+        //    str = str.replace(/</g, "");
+        //    str = str.replace(/>/g, "");
+        //    $("#t").val(Axis[0]);
+        //}
+        //try {
+        //    $("#t").val(Axis[1][1]);
+        //}
+        //catch (error) {
+        //    alert(error);
+        //}
     </script>
 </body>
 </html>
