rect building rotate knee shudder 2-3 pillar

--- a/Rastera/asnic/serial/persuation.html
+++ b/Rastera/asnic/serial/persuation.html
@@ -252,6 +252,8 @@
 
 [Photograghy:城门串鑫杀]
     HxW 照相
-    *Wrapped [文(疼type range)武]
-    闹歪边 曲流拐弯的部分：Vesaid 黄鼠狼 唱歌 音乐 
+    
+闹歪边 曲流拐弯的部分：Vesaid 黄鼠狼 唱歌 音乐 
+*Wrapped [文(疼type range)武]    
+    打忘 秘密 交织 自己搞自己 老鼠扛枪
 -->
