--- a/AngelNetwork/analytical/Leonic/leon.html
+++ b/AngelNetwork/analytical/Leonic/leon.html
@@ -102,6 +102,12 @@ Flat.Maticals.Sequence?:
     Area->Small.Angle
     Circle~Transact.Caide
     Rect-Ruled.Side|Angle
+Leonic Leonick
+    Just right there ,absolutely
+     Computer.Drag.Rotate
+     Center.Fusion
+
+ 
 </pre>
 </body>
 </html>
