--- a/AngelNetwork/analytical/shapable.html
+++ b/AngelNetwork/analytical/shapable.html
@@ -89,7 +89,7 @@ Transcolor
     var SymbolPrioity = ["Separator", "Link", "Bracket"];
     index
 //Axis:tricycle 
-var SideKorner =
+var Directive =
     [
         ["Top", "Left", "Right", "Bottom"]
     ]; 
