--- a/AngelNetwork/analytical/Leonic/rt.html
+++ b/AngelNetwork/analytical/Leonic/rt.html
@@ -52,6 +52,17 @@ LeonBrain.Dimention.Complexity.LeadTo:EasyFirst
 正确测量优先：
 名词：数词：用了一个ComputerScreen.Route.Line.Solid.Rectangle
 ComputerScreen.Renliy.NeverAxis.AngleOut.Leadito->LeonStickColor.Flat.//不会从角顶
+
+Leon.Ionic
+
+Rectangle.Drag.MiniumAnalytical
+Count.Computer.RulerGrid:1,4,9
+Kolor=Axis.Side4
+Area.Computer.Offset
+
+RectangleMergeTriangle.Analytical.Dotline
+Offset2:GridRectangle4.Direction.BottomFirst.CenterMark
+Offset1:GridRectangle1.Direction.BottomFirst.NoCenterMark
     </pre>
 </body>
 </html>
