--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -119,7 +119,18 @@
     成交价驾驶○司漏仇睡码捅tou
     铁眠涨潮
 12-8
-    六通宾馆 天耳寄生 浑浊转悠 亮剑小士兵
+    六通宾馆 天耳寄生 浑浊转悠 亮剑 国民党 门卫 小士兵
+VoyoOrdered12-9
+    Rect short entrance 
+    urine surrpess met with old women locally and embressed while being forced peeth
+     pace long time and more than 7 dreaming timeS before Apisoda(The possessed sprites with masters sufferings apswms Apisoda)
+    Vesaid:（last and peach)
+AfterXhn-ZZi
+    Uygher.Tunal.Underground.EatenMeal
+        Afred of faces fleet away
+    Bicycle.居买尔 他是我妹妹
+
+    Wangdan~Wuerkaixi
 </pre>
 </body>
 </html>
