--- a/AngelNetwork/analytical/func/permutation.html
+++ b/AngelNetwork/analytical/func/permutation.html
@@ -9,6 +9,9 @@
         body {
             /*background-color: darkblue;
             color: white;*/
+            font-family:sans-serif;
+            font-size:12px;
+            
         }
     </style>
 </head>
