--- a/AngelNetwork/analytical/asnical.html
+++ b/AngelNetwork/analytical/asnical.html
@@ -16,7 +16,14 @@
     </pre>
 
   <!--  <textarea id="t" cols="100" rows="50">
+         var Funkes = ["split slice indexOf lastIndexOf substring replace	charAt toLowerCase	toUpperCase	concat "]
 
+        var Languages = [
+            //---english--
+            ["splitslice  first  last  intercept replace	 at  lower	 upper	 connect "],
+            //----chinese----
+            ["分隔 截取 初始索引 最后索引 索引之间替换 索引 小写 大写 连接"]
+        ];
  </textarea>-->
     <pre id="p">
 
@@ -25,7 +32,7 @@
     <script type="text/javascript">
         //var Axis =
         //    [
-        //        ["Center", "Angle", "SideKick"]
+        //        ["CenterAngleSideKick"]
         //    ];
         //function f() {
         //    var str = $("#t").val();
