--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -131,6 +131,8 @@ AfterXhn-ZZi
     Bicycle.居买尔 他是我妹妹
 
     Wangdan~Wuerkaixi
+    Steve Jobs:
+    Using sense of achievement to agianist to ?
 </pre>
 </body>
 </html>
