--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -131,8 +131,9 @@ AfterXhn-ZZi
     Bicycle.居买尔 他是我妹妹
 
     Wangdan~Wuerkaixi
-    Steve Jobs:
-    Using sense of achievement to agianist to ?
+    Steve Jobs?:Wright Bros fly plane
+    Using sense of achievement to agianist to ? //Effect
+
 </pre>
 </body>
 </html>
