--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -25,8 +25,9 @@
         ]
         Programs = [
             "js java cs cpp",
-            "function var",
             "split slice  first last  intercept replace charAt lower upper connect ",
+            "function var const import export",
+            "public private ",
         ]
         Kites = [
             "  , () [] {}.",
