--- a/AngelNetwork/analytical/Leonic/leon.html
+++ b/AngelNetwork/analytical/Leonic/leon.html
@@ -106,8 +106,8 @@ Leonic Leonick
     Just right there ,absolutely
      Computer.Drag.Rotate
      Center.Fusion
-
- 
+Renliy.SingleSolid.Analyiz
+    Require.MoreThan2.Solid
 </pre>
 </body>
 </html>
