--- a/AngelNetwork/analytical/analytical.html
+++ b/AngelNetwork/analytical/analytical.html
@@ -15,7 +15,15 @@ Prioity
     Usage
     Like
     //Implused Prefered:
-        Type:Kind Kant Kint  Rant
+        Solid.Triangle.Just: 
+        Renliy.SmallRange:Kind         
+            Triangle.Atowardiz:Dynmaical|KnockedOn|JustStabled
+                Type
+                 Kint
+                 Kant
+            Solid.Rectangle.Range:Dynmaical|KnockedOn
+                Rant 
+                Rint
         Infort:
 
 Implused
