--- a/AngelNetwork/analytical/Leonic/leon.html
+++ b/AngelNetwork/analytical/Leonic/leon.html
@@ -107,7 +107,28 @@ Leonic Leonick
      Computer.Drag.Rotate
      Center.Fusion
 Renliy.SingleSolid.Analyiz
+Solid.Benchmark.Mutual|Triple = Accuracy
     Require.MoreThan2.Solid
+        
+    Renliy~KansaiF.Axis
+        Steps
+        Count
+        Frequent
+Mobilize Dynamic Descript:Word
+    Leon.Axis
+        ActualFormed How    
+        Rotate
+        Measurement
+        *OppositeThinking
+    Axis.Leon
+CenterDot.Mesure.Renliy.SidePush
+    PushAlongSide L2,L3 L4Center:BottomDirected
+        Interface.LineSaving
+        Intersect:Habit
+    Leonic.Measure:Triangle.InsideBottomLine.Dotline.PushUp
+    Lionic.Kolor.Dynamic.Measuring.Like:Computer.Refreashing
+    Outside.Triangle.Piled(FromBottom)
+    
 </pre>
 </body>
 </html>
