--- a/AngelNetwork/analytical/Leonic/leon.html
+++ b/AngelNetwork/analytical/Leonic/leon.html
@@ -120,6 +120,7 @@ Mobilize Dynamic Descript:Word
         Rotate
         Measurement
         *OppositeThinking
+        *Solid.Compare
     Axis.Leon
 CenterDot.Mesure.Renliy.SidePush
     PushAlongSide L2,L3 L4Center:BottomDirected
@@ -127,7 +128,7 @@ CenterDot.Mesure.Renliy.SidePush
         Intersect:Habit
     Leonic.Measure:Triangle.InsideBottomLine.Dotline.PushUp
     Lionic.Kolor.Dynamic.Measuring.Like:Computer.Refreashing
-    Outside.Triangle.Piled(FromBottom)
+    Outside.Triangle(MinorAreaFirst).Piled(FromBottom)
     
 </pre>
 </body>
