--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -133,6 +133,7 @@ AfterXhn-ZZi
     Wangdan~Wuerkaixi
     Steve Jobs:
     Using sense of achievement to agianist to ?
+Alfed.LeadTwio    身体空洞感
 </pre>
 </body>
 </html>
