--- a/Rastera/asnic/serial/persuation.html
+++ b/Rastera/asnic/serial/persuation.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div id="contain"  >
+    <div id="contain">
 <pre id="editor">
 阿萨尼克空间模板：植鱼照 尽舞纯 
     循环注意！
@@ -171,7 +171,7 @@
 
   </pre>
 
-</div>
+    </div>
     <script src="../../content/ace-editor/ace.js"></script>
     <script src="../../content/ace-editor/ace-settings.js"></script>
 </body>
@@ -190,7 +190,7 @@
     松果体
     阑尾炎
     悟净眼线
-    识海 法海 
+    识海 法海
     暗能->习气种子 边张边围
     不能直接打宇宙光波 目前没有特别现今的绝对地点传送仪
     磕头 下体 邪性基因
@@ -234,7 +234,7 @@
     解释for people：晚上阳气（白衣鬼）  白天黑衣鬼（） 央企外翻
     证书 祭祀 平衡 图标摆放的问题
     尼姑攻击
-    猪 蒙住眼睛 五官 each for testing 灌水 
+    猪 蒙住眼睛 五官 each for testing 灌水
     宗教 佛叫 晚上老叫唤 猫三狗四
     历史最早起源女人?.做爱?.行房?.杏 eaten by whom
     会弹钢琴但是人坐在面前不理不回不欣赏 还是自己认识的人
@@ -252,8 +252,42 @@
 
 [Photograghy:城门串鑫杀]
     HxW 照相
-    
-闹歪边 曲流拐弯的部分：Vesaid 黄鼠狼 唱歌 音乐 
-*Wrapped [文(疼type range)武]    
+
+闹歪边 曲流拐弯的部分：Vesaid 黄鼠狼 唱歌 音乐
+*Wrapped [文(疼type range)武]
     打忘 秘密 交织 自己搞自己 老鼠扛枪
+
+    11.18 05:25
+
+persevide
+Rose 健康 美丽 人知
+玩
+anti善type
+启示录
+    朱豚tube
+        需艳借 whatask
+        过客
+    笋今耸 ez
+耶稣女w附体
+former life
+    泥蚂勒歌笔
+     蜗曹槽腻嬷
+     3.934 打扫 除了问题 胃
+piggy breast maike
+轮缘 Lo
+疼虚园 repeat
+funcback
+    suck 物体
+    tallsize
+    skincolor
+    舒美fly
+调用 函数 植树赵鱼
+    American eu monegy
+    肝一下 papa limly mama
+文付t 武斗外
+牛演累 年 复仇 丑
+付丹龘薛 铺速austere
+
+
+
 -->
