git ignored files

--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -135,10 +135,12 @@ AfterXhn-ZZi
     Using sense of achievement to agianist to ?
 Alfed.LeadTwio    身体空洞感
 
-Eve.Example12~16
+Eva~back.Example12~16
     海潮 平衡人
    General.梦:老撒尿 
-    卫星 ionics
+    卫星 ionics ionicals
+    ？搭救 uncle 
+    竹取物语
 </pre>
 </body>
 </html>
