--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -1,11 +1,13 @@
-﻿<!DOCTYPE >
+﻿<!DOCTYPE>
 <html>
+
 <head>
 
     <title></title>
     <!--  <script src="../content/jquery/jquery-3.5.1.min.js"></script>-->
     <script src="../../content/vue/vue.min.js"></script>
 </head>
+
 <body>
     <pre id="preditor">
 {{content}}
@@ -14,14 +16,18 @@
  </pre>
     <script>
         Asniks = [
-            // "separator link bracket",
-            "letter word sentence",
-            "single double triple rectangle",
-            "is",
-            "name index",
+            // "letter word sentence",
+            // "single double triple",
             "mideast",
-            "rint kint type kind classify",
             "nouns pronouns adjectives numerals verb adverbs articles prepositions conjunctions interjections auxiliary"
+        ]
+        Identities = [
+            "is",
+            "id index name desc content text",
+            "rint kint type kind classify",
+        ]
+        Language = [
+
         ]
         Programs = [
             "js java cs cpp",
@@ -78,6 +84,7 @@
         //minor incompitable ie es6 class
     </script>
 </body>
+
 </html>
 
 <!--Analytical.Require.Developer.AmericaComputer.Serials.Language.HtmlFirst
