cvoid lang analytical

--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -133,7 +133,7 @@ AfterXhn-ZZi
     Wangdan~Wuerkaixi
     Steve Jobs:
     Using sense of achievement to agianist to ?
-Alfed.LeadTwio    身体空洞感
+Alfed.Leato    身体空洞感
 
 Eva~back.Example12~16
     海潮 平衡人
@@ -141,6 +141,10 @@ Eva~back.Example12~16
     卫星 ionics ionicals
     ？搭救 uncle 
     竹取物语
+    
+    赵鑫 锂宗森 姿色尿 行州 超市（moisture）回 悲井 肺炎  
+    张鑫 ctr小屋index
+    鑫关 Nuemnia
 </pre>
 </body>
 </html>
