--- a/Rastera/asnic/quest/vivo-requires.html
+++ b/Rastera/asnic/quest/vivo-requires.html
@@ -31,3 +31,22 @@ partial material collect: ani human plant
 歌德 like Porn ancient | present snical influence forms type
    like metalbed but east never curtually sensed
 
+"An.dev 需求理序概括
+txt md html
+md.isapped.false
+    md.uml.kansai.first
+    md.table.user
+
+html.jquery.vue
+    html.user.form.svg.rect.table.flex
+kolor with one Upperlower
+全部操作系统 最底层TXT开始
+symbolmetrik kof alloic metricwitch first
+其他语言 metric~index
+结构设计:分隔符 文字 belongto ，
+立体 求 balance necklace
+
+   
+   "
+   
+
