Frame 7 Urinal upset while lie down

--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -145,6 +145,12 @@ Eva~back.Example12~16
     赵鑫 锂宗森 姿色尿 行州 超市（moisture）回 悲井 肺炎  
     张鑫 ctr小屋index
     鑫关 Nuemnia
+Sleep Frame 7 胯下离邵滑
+    BrainHitFirst.Kolor.RigidPolystar  
+    FistTwoFist 
+    ViolenctKint:School Mafia Jail
+    Definit:Hatred.Traction+,Renliy&Animals
+    Definit:Renlied(Being once an human, then being portalled).Embressing.Ideological.TinyFightIndex.Reveal
 </pre>
 </body>
 </html>
