--- a/Rastera/asnic/analytical/requires.html
+++ b/Rastera/asnic/analytical/requires.html
@@ -8,9 +8,11 @@
 <body>
     
 <pre id="editor">
-editor.md	editor.md
-平行图标	2d-3d?.Gaps
-新词汇语言	whenAsinc(ism sim) Rotate shapely, read by people GEOLOGICALY
+    
+平行图标	
+    2d-3d?.Gaps
+新词汇语言	
+    WhenSinc(ism sim) Rotate shapely, read by people GEOLOGICALY
 咒语	
 公式规范化	
 三角元素收集 公式 染色体等	
@@ -18,15 +20,17 @@ editor.md	editor.md
 圆形 三角形 菱形	向心力 沿着线段 图形 转动
 角 round-rec 3 14	圆形 交叉 错综 分析
 艾磁欧	酒精测试仪 强力磁铁
-艾磁欧	烟雾传感器
+	烟雾传感器
 水晶球	方代表圆 效率 3.14 KansaiF
-AsnicInterface	Metro
-AsnicInterface	WordPress
-AsnicInterface	gridly
-    声控
+AsnicInterface
+    Metro
+	WordPress
+	gridly
+   
 qml canvas svg	Nisote Nint 九宫格 坐标游戏 frame func metrix
 asc  字符画	
 气味生成装置	
+
 所有字母偏旁部首 Geograph 	gladiator = triangle arc metric-thinking
 公园 游戏 平面图	An.user.simple
 气味信息素生成器	Creal.Tetris.Smile.hand movement water underwear clothes
@@ -34,7 +38,7 @@ asc  字符画
 维赛德联网全身穿戴 sexcast vehicle	
 diagram	d3.js
 积木类型	汉若塔 乐高 block
-Enzo 类似于设备	细胞结构图 水银kolorful 太阳能板 化学 电 存储
+Enzo  声控类似于设备	细胞结构图 水银kolorful 太阳能板 化学 电 存储
     Requires:Sound.wav mp3  wave hash combine water decipher
     树莓派、三维、OpenCV、OpenGL、ffmpeg、OSG、单片机
     Flat.Colorful.KidFist.AxisLine|Flat.Design
