--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE>
 <html>
-
 <head>
 
     <title></title>
@@ -18,7 +17,6 @@
             // "letter word sentence",
             // "single double triple",
         Asniks = [
-            "mideast",
             "nouns pronouns adjectives numerals verb adverbs articles prepositions conjunctions interjections auxiliary"
         ]
         Identities = [
@@ -27,7 +25,7 @@
             "rint kint type kind classify",
         ]
         Language = [
-
+            "english chinese turkish"
         ]
         Programs = [
             "js java cs cpp",
