Earth.EyeVision.Flat.Isoic-Metric  Earth.EyeVision.Flat.Trikon-Metric

--- a/AngelNetwork/analytical/asnic/shapable.html
+++ b/AngelNetwork/analytical/asnic/shapable.html
@@ -33,6 +33,8 @@ Intelligent = ["Human","Rockmega","Leon"]; abs~cfs abs~mfs
         名词 形容词 =  Limit Range Bound Span
 var Leon = ["Source", "Orgin"]; //Source = Substance
 var Maticals = ["Flat", "Tricycle","Metric"];//Metric立体
+ Earth.EyeVision.Flat.Isoic-Metric
+ Earth.EyeVision.Flat.Trikon-Metric
     //固 顶 立
     //Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
     //Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
@@ -42,8 +44,8 @@ var Axis =
     [
         ["Center","Side", "Angle" ]//Caisde saide kaide 立体面角
     ];    
-    Flat.Caide 
-    Flat.CaideKorner //RoundTriangle
+    Caide 
+    CaideKorner //RoundTriangle
 
     Maticals
         Impressed Parallel(abs so lute) Interface Kross 
