--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -144,7 +144,7 @@ Eva~back.Example12~16
     
     赵鑫 锂宗森 姿色尿 行州 超市（moisture）回 悲井 肺炎  
     张鑫 ctr小屋index
-    鑫关 Nuemnia
+    鑫关 Nuemnia pneumatic boss rotate chair testicle ball
 胯下离邵滑 Sleep Frame 7 
     BrainHitFirst.Kolor.RigidPolystar  
     FistTwoFist 
