vscode mac leon commit

--- a/AngelNetwork/analytical/Leonic/leon.html
+++ b/AngelNetwork/analytical/Leonic/leon.html
@@ -130,7 +130,7 @@ CenterDot.Mesure.Renliy.SidePush
     Lionic.Kolor.Dynamic.Measuring.Like:Computer.Refreashing
     Outside.Triangle(MinorAreaFirst).Piled(FromBottom)
     
-Leonic:Merge~Actual,SidePush,Proline,Measure//融  推 射 量 测
+Leonic:Merge~Actual,AxisPush(Side?First),Proline,Measure//融  推 射 测 量
    //Involved.Intelligent.Analytical,Count
 
     Inside Outside BorderIncluded
