--- a/AngelNetwork/analytical/Leonic/leon.html
+++ b/AngelNetwork/analytical/Leonic/leon.html
@@ -130,10 +130,16 @@ CenterDot.Mesure.Renliy.SidePush
     Lionic.Kolor.Dynamic.Measuring.Like:Computer.Refreashing
     Outside.Triangle(MinorAreaFirst).Piled(FromBottom)
     
-Leonic:Merge~Actual,AxisPush(Side?First),Proline,Measure//融  推 射 测 量
+Leonic:Merge~Actual,AxisDragPush(Side?First),Proline,Measure//融  推 射 测 量
    //Involved.Intelligent.Analytical,Count
 
     Inside Outside BorderIncluded
+ //立体图形用平面表示的术语解释 As Ayis
+ Flat.Expression|Demostration.DefinedAyis:Project
+    Project.Outline:Background
+    Project.Flat
+    Project.Tripline
+    Project.
 </pre>
 </body>
 </html>
