--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -152,6 +152,10 @@ Eva~back.Example12~16
     Definit:Hatred.Traction+,Renliy&Animals
     Definit:Renlied(Being once an human, then being portalled).Embressing.Ideological.TinyFightIndex.Reveal
     Repate.Jumps
+12m19d
+    Wjcking.Childish:活澈压国强 鑫酸肝 吸引~耗撵 
+    克朗合 浸淫睡开
+
 </pre>
 </body>
 </html>
