4 kind of words

--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -16,7 +16,9 @@
     <script>
             // "letter word sentence",
             // "single double triple",
+
         Asniks = [
+            "stick stack stabled colored",
             "nouns pronouns adjectives numerals verb adverbs articles prepositions conjunctions interjections auxiliary"
         ]
         Identities = [
