--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -156,7 +156,10 @@ Eva~back.Example12~16
     Wjcking.Childish:活澈压国强 鑫酸肝 吸引~耗撵 
     克朗合 浸淫睡开
     Qing丁爱辛亥 叁怨侨 苏铀硼 cotgent 曲镁~小珍Jenny（五金地苏明)~婷媒
-
+    Requirement.Words
+        Speak.Direct.HabitLeftRight|RightLeft.Fliped
+        Think.BrainParticle.RandomLike
+        Sing.Altair~Fusional:Vesaid
 </pre>
 </body>
 </html>
