--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -27,7 +27,7 @@
             "rint kint type kind classify",
         ]
         Language = [
-            "english chinese turkish"
+            "english chinese trans-turk"
         ]
         Programs = [
             "js java cs cpp",
