--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -152,10 +152,11 @@ Eva~back.Example12~16
     Definit:Hatred.Traction+,Renliy&Animals
     Definit:Renlied(Being once an human, then being portalled).Embressing.Ideological.TinyFightIndex.Reveal
     Repate.Jumps
-12m19d
+12m19-20d
     Wjcking.Childish:活澈压国强 鑫酸肝 吸引~耗撵 
     克朗合 浸淫睡开
     Qing丁爱辛亥 叁怨侨 苏铀硼 cotgent 曲镁~小珍Jenny（五金地苏明)~婷媒
+    KLH~油幼柏树 赫尔曼  Hoermeng 可怜
     Requirement.Words
         Speak.Direct.HabitLeftRight|RightLeft.Fliped
         Think.BrainParticle.RandomLike
