--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -161,6 +161,15 @@ Eva~back.Example12~16
         Speak.Direct.HabitLeftRight|RightLeft.Fliped
         Think.BrainParticle.RandomLike
         Sing.Altair~Fusional:Vesaid
+Wingfly
+    At least more than 3s ,\\老掌沟奇遇记 后今天一次
+
+    Index~Eylx:  Kid like think  HelliK->HellEnic
+        Prison.ConfinePlace.DesiredLiberty.DragPushImagenation
+        Escapist
+        Freedom   
+            Free.France.Wall.Poukour
+            Viliage.Lowrate~Earthsoil 
 </pre>
 </body>
 </html>
