--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -89,8 +89,7 @@
     KLH 渴lang禾 哈萨克 阿勒泰
     疼?.1984Start  央视 老掌沟
 11-29
-     
-	    形态 mfs cfs
+    形态 mfs cfs
             earththink 认(ren)知文体
             形态.美人鱼.维金美
         人	
@@ -170,6 +169,7 @@ Wingfly
         Freedom   
             Free.France.Wall.Poukour
             Viliage.Lowrate~Earthsoil 
+    Nodeoff.2WayStraint.Dangerous.Keyboard
 </pre>
 </body>
 </html>
